gcc/testsuite/gcc.dg/noncompile/920824-1.c
struct s{struct s{int i;}x;};	/* { dg-error "nested redefinition" } */
